[package]
name = "mb"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.8.0"
hsl = "0.1.1"
image = "0.23.4"
indicatif = "0.14.0"
rayon = "1.3.0"
clap = { git = "https://github.com/clap-rs/clap/" }